--- a/PetApp_Empresa/Views/Mascotas/VistaMascota.cshtml
+++ b/PetApp_Empresa/Views/Mascotas/VistaMascota.cshtml
@@ -107,10 +107,12 @@
     /* Imagen de la tarjeta */
     .mascota-img {
         width: 100%;
-        height: 200px;
-        object-fit: cover;
+        height: 200px; /* Mantén una altura fija */
+        object-fit: contain; /* Ajusta la imagen dentro del contenedor sin recortar */
         border-bottom: 3px solid #a81c1c;
+        background-color: #f8f9fa; /* Fondo blanco o un color neutro */
     }
+
 
     /* Contenido de la tarjeta */
     .card-body {
